--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -1436,8 +1436,8 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 #
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_MT7620=y
-CONFIG_MMC_SDHCI_PLTFM=n
-CONFIG_MMC_TIFM_SD=n
+CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_MMC_TIFM_SD=y
 CONFIG_MMC_SDHCI_PCI=y
 CONFIG_MMC_RICOH_MMC=y
 # CONFIG_MMC_CB710 is not set
