--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -1437,6 +1437,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_MT7620=y
 CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_SIT=y
 CONFIG_MMC_TIFM_SD=y
 CONFIG_MMC_SDHCI_PCI=y
 CONFIG_MMC_RICOH_MMC=y
@@ -1630,8 +1631,9 @@ CONFIG_NLS_CODEPAGE_936=y
 # CONFIG_NLS_CODEPAGE_1250 is not set
 # CONFIG_NLS_CODEPAGE_1251 is not set
 # CONFIG_NLS_ASCII is not set
-CONFIG_NLS-CP437=y
+CONFIG_NLS_CP437=y
 CONFIG_NLS_ISO8859_1=y
+ONFIG_NLS_AUTOMOUNT=y
 # CONFIG_NLS_ISO8859_2 is not set
 # CONFIG_NLS_ISO8859_3 is not set
 # CONFIG_NLS_ISO8859_4 is not set
