--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -853,8 +853,8 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 #
 # CONFIG_PHANTOM is not set
 # CONFIG_INTEL_MID_PTI is not set
-# CONFIG_SGI_IOC4 is not set
-# CONFIG_TIFM_CORE is not set
+CONFIG_SGI_IOC4=y
+CONFIG_TIFM_CORE=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_HP_ILO is not set
 # CONFIG_PCH_PHUB is not set
@@ -1439,6 +1439,7 @@ CONFIG_MMC_SDHCI_MT7620=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_SIT=y
 CONFIG_MMC_TIFM_SD=y
+CONFIG_MMC_TIFM_7620=y
 CONFIG_MMC_SDHCI_PCI=y
 CONFIG_MMC_RICOH_MMC=y
 # CONFIG_MMC_CB710 is not set
