--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -855,7 +855,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_INTEL_MID_PTI is not set
 CONFIG_SGI_IOC4=y
 CONFIG_TIFM_CORE=y
-CONFIG_TIFM_7620=y
+CONFIG_TIFM_7XX1=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_HP_ILO is not set
 # CONFIG_PCH_PHUB is not set
