--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -1440,7 +1440,7 @@ CONFIG_MMC_SDHCI_MT7620=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_SIT=y
 CONFIG_MMC_TIFM_SD=y
-CONFIG_MMC_TIFM_7620=y
+CONFIG_MMC_TIFM_MT7620=y
 CONFIG_MMC_SDHCI_PCI=y
 CONFIG_MMC_RICOH_MMC=y
 # CONFIG_MMC_CB710 is not set
