--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -1635,7 +1635,7 @@ CONFIG_NLS_CODEPAGE_936=y
 # CONFIG_NLS_ASCII is not set
 CONFIG_NLS_CP437=y
 CONFIG_NLS_ISO8859_1=y
-ONFIG_NLS_AUTOMOUNT=y
+CONFIG_NLS_AUTOMOUNT=y
 # CONFIG_NLS_ISO8859_2 is not set
 # CONFIG_NLS_ISO8859_3 is not set
 # CONFIG_NLS_ISO8859_4 is not set
