--- a/trunk/configs/boards/HC5861/kernel-3.4.x.config
+++ b/trunk/configs/boards/HC5861/kernel-3.4.x.config
@@ -67,9 +67,9 @@ CONFIG_MT7620_ASIC=y
 CONFIG_RT2880_DRAM_128M=y
 # CONFIG_RT2880_DRAM_256M is not set
 CONFIG_RALINK_RAM_SIZE=128
-# CONFIG_RT2880_UART_57600 is not set
-CONFIG_RT2880_UART_115200=y
-CONFIG_RALINK_UART_BRATE=115200
+CONFIG_RT2880_UART_57600=y
+# CONFIG_RT2880_UART_115200 is not set
+CONFIG_RALINK_UART_BRATE=57600
 # CONFIG_RALINK_TIMER_DFS is not set
 CONFIG_RALINK_TIMER_WDG=m
 # CONFIG_RALINK_TIMER_WDG_RESET_OUTPUT is not set
@@ -344,10 +344,22 @@ CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
 # Bus options (PCI, PCMCIA, EISA, ISA, TC)
 #
 CONFIG_HW_HAS_PCI=y
-# CONFIG_PCI is not set
+CONFIG_PCI=y
+CONFIG_PCI_DOMAINS=y
 # CONFIG_ARCH_SUPPORTS_MSI is not set
+# CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
+# CONFIG_PCI_STUB is not set
+CONFIG_PCI_DISABLE_COMMON_QUIRKS=y
+# CONFIG_PCI_IOV is not set
+# CONFIG_PCI_PRI is not set
+# CONFIG_PCI_PASID is not set
+CONFIG_PCIEPORTBUS=y
+# CONFIG_PCIEAER is not set
+# CONFIG_PCIEASPM is not set
 CONFIG_MMU=y
 # CONFIG_PCCARD is not set
+# CONFIG_HOTPLUG_PCI is not set
+# CONFIG_RAPIDIO is not set
 
 #
 # Executable file formats
@@ -839,6 +851,11 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 #
 # Misc devices
 #
+# CONFIG_PHANTOM is not set
+# CONFIG_INTEL_MID_PTI is not set
+CONFIG_SGI_IOC4=y
+CONFIG_TIFM_CORE=y
+CONFIG_TIFM_7XX1=y
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_HP_ILO is not set
 # CONFIG_PCH_PHUB is not set
@@ -1018,7 +1035,7 @@ CONFIG_UNIX98_PTYS=y
 CONFIG_RALINK_GPIO=y
 # CONFIG_RALINK_GPIOMODE_EPHY is not set
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
-CONFIG_RALINK_GPIOMODE_PA_G=y
+# CONFIG_RALINK_GPIOMODE_PA_G is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
 CONFIG_RALINK_GPIOMODE_SPI_REFCLK=y
@@ -1062,7 +1079,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_APPLICOM is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
-#CONFIG_DEVPORT=y
+CONFIG_DEVPORT=y
 # CONFIG_RAMOOPS is not set
 # CONFIG_I2C is not set
 # CONFIG_SPI is not set
@@ -1234,7 +1251,7 @@ CONFIG_SND_USB_6FIRE=m
 # CONFIG_SOUND_PRIME is not set
 CONFIG_USB_ARCH_HAS_OHCI=y
 CONFIG_USB_ARCH_HAS_EHCI=y
-# CONFIG_USB_ARCH_HAS_XHCI is not set
+CONFIG_USB_ARCH_HAS_XHCI=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
@@ -1259,7 +1276,7 @@ CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_C67X00_HCD is not set
 # CONFIG_USB_XHCI_HCD is not set
 CONFIG_USB_EHCI_HCD=m
-# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
+CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
@@ -1399,15 +1416,17 @@ CONFIG_USB_SERIAL_OPTION=m
 # OTG and related infrastructure
 #
 # CONFIG_NOP_USB_XCEIV is not set
-CONFIG_MMC=m
-# CONFIG_MMC_DEBUG is not set
+# CONFIG_UWB is not set
+CONFIG_MMC=y
+CONFIG_MMC_DEBUG=n
 # CONFIG_MMC_UNSAFE_RESUME is not set
 # CONFIG_MMC_CLKGATE is not set
 
 #
 # MMC/SD/SDIO Card Drivers
 #
-CONFIG_MMC_BLOCK=m
+CONFIG_MMC_BLOCK=y
+CONFIG_MMC_BLOCK_MOUNT=y
 CONFIG_MMC_BLOCK_MINORS=8
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
@@ -1416,10 +1435,22 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
-# CONFIG_MMC_SDHCI is not set
+CONFIG_MMC_SDHCI=y
+CONFIG_MMC_SDHCI_MT7620=y
+CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_SIT=y
+CONFIG_MMC_TIFM_SD=y
+CONFIG_MMC_TIFM_MT7620=y
+CONFIG_MMC_SDHCI_PCI=y
+CONFIG_MMC_RICOH_MMC=y
+# CONFIG_MMC_CB710 is not set
+CONFIG_MMC_VIA_SDMMC=n
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
-CONFIG_MTK_MMC=m
+CONFIG_MTK_MMC=y
+CONFIG_MTK_SD=y
+CONFIG_MTK_AEE_KDUMP=y
+CONFIG_MTK_MMC_CD_POLL=y
 CONFIG_MTK_AEE_KDUMP=y
 CONFIG_MTK_MMC_CD_POLL=y
 # CONFIG_MEMSTICK is not set
@@ -1603,9 +1634,9 @@ CONFIG_NLS_CODEPAGE_936=y
 # CONFIG_NLS_CODEPAGE_1250 is not set
 # CONFIG_NLS_CODEPAGE_1251 is not set
 # CONFIG_NLS_ASCII is not set
-#CONFIG_NLS_CP437=y
+CONFIG_NLS_CP437=y
 CONFIG_NLS_ISO8859_1=y
-#CONFIG_NLS_AUTOMOUNT=y
+CONFIG_NLS_AUTOMOUNT=y
 # CONFIG_NLS_ISO8859_2 is not set
 # CONFIG_NLS_ISO8859_3 is not set
 # CONFIG_NLS_ISO8859_4 is not set
@@ -1771,8 +1802,8 @@ CONFIG_CRYPTO_DES=m
 # Library routines
 #
 CONFIG_BITREVERSE=y
-#CONFIG_NO_GENERIC_PCI_IOPORT_MAP=y
-#CONFIG_GENERIC_PCI_IOMAP=y
+CONFIG_NO_GENERIC_PCI_IOPORT_MAP=y
+CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
