--- a/trunk/configs/templates/HC5861.config
+++ b/trunk/configs/templates/HC5861.config
@@ -258,3 +258,7 @@ CONFIG_FIRMWARE_INCLUDE_TUNSAFE=n
 CONFIG_FIRMWARE_INCLUDE_WIREGUARD=n
 
 CONFIG_FIRMWARE_INCLUDE_ADBYBY=y
+
+CONFIG_FIRMWARE_INCLUDE_CADDY=y
+
+CONFIG_FIRMWARE_INCLUDE_CADDYBIN=n
